--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ cachetools==4.1.1
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
+cycler==0.10.0
 decorator==4.4.2
 defusedxml==0.6.0
 entrypoints==0.3
@@ -35,8 +36,10 @@ jupyterlab-pygments==0.1.2
 jupyterlab-server==1.2.0
 Keras==2.4.3
 Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
 Markdown==3.3
 MarkupSafe==1.1.1
+matplotlib==3.3.2
 mistune==0.8.4
 nbclient==0.5.0
 nbconvert==6.0.7
@@ -51,6 +54,7 @@ pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
+Pillow==7.2.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 protobuf==3.13.0
